--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="./images/logo.png" alt="" width="50" height="50">
+            <img src="./images/portfolio (1).png" alt="" width="25" height="25">
         </div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
