--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="./images/portfolio (1).png" alt="" width="25" height="25">
+            <img src="./logo pf.png" alt="" width="25" height="25">
         </div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -29,7 +29,12 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <p>Write a brief introduction about yourself here.</p>
+            <p>I bring a wealth of expertise in HTML, CSS, JavaScript, React.js, and Git/GitHub. I have dedicated myself to crafting
+            interactive, user-centric websites and applications that seamlessly blend functionality with an intuitive user
+            interface. What sets me apart is not only my proficiency in front-end technologies but also my solid foundation in
+            programming languages like Java, JavaScript, C, and Python. This well-rounded perspective enables me to approach complex
+            problems with a comprehensive understanding, fostering innovative and effective solutions.I am eager to bring my passion
+            for creating outstanding web experiences and my diverse skill set to your team.</p>
         </div>
     </section>
 
@@ -39,15 +44,22 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
+            <li>React Js</li>
+            <li>Node Js</li>
+            <li>Bootstrap</li>
+            <li>MySql</li>
+            <li>Figma(software)</li>
         </ul>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Title</h3>
-            <p>Project description</p>
-            <a href="https://github.com/">GitHub Repository</a>
+            <h3>Quiz</h3>
+            <p>The Quiz is a comprehensive assessment tool designed to evaluate proficiency in JavaScript programming. Featuring 25 thoughtfully crafted questions, this quiz covers a wide range of topics and concepts essential for mastering JavaScript development. Each question is meticulously designed to challenge participants and provide insights into their understanding of JavaScript fundamentals, syntax, and best practices. With detailed answers provided for every question, participants can not only test their knowledge but also learn and improve their skills. 
+</p>
+            <a href="
+https://github.com/Sheethalshanthraj">GitHub Repository</a>
         </div>
     </section>
 
